stylesheet.css
@keyframes fadeIn {
  from {opacity: 0;}
  to {opacity: 1;}
}

.one-second-fadeIn {
  opacity: 0;
  animation: fadeIn 1s;
  animation-fill-mode: forwards; 
}

body {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}


a {
  font-style: italic;
  text-decoration: none;
  color: #0000EE;
}

a:hover {
   color: #28a1a2;
}

a.active {
   color: #28a1a2;
}

td {
  padding: 2px 10px;
}

/* mobile version of sidenav, sidenav occupies top of viewport */
.sidenav {
  background: linear-gradient(to right, #fff2c1, white);
  padding-top: 20px;
}

/* desktop version of sidenav, sidenav takes up left 20% of viewport */
@media screen and (min-width: 48em) {
  .sidenav {
    height: 100%; 
    width: 20%;
    position: fixed;
    top: 0;
    left: 0;
    overflow-x: hidden;
    padding-top: 20px;
    z-index: 1;
  }

  /* below code isn't running for some reason */
  .social-media-icons {
    margin: 50% 0% 0% 0%;
  }
}

.title {
  text-align: center;
  font-size: 3em;
  color: #28a1a2;
  font-family: 'Kaushan Script', 'Helvetica Neue', Helvetica, Arial, cursive;
  margin: 0px;
}

.subheading {
  text-align: center;
  margin: 1em 3em 3em 3em;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  letter-spacing: 1px;
  display: block;
  font-size: 70%;
  font-weight: 400;
  color: #447677;
  text-transform: uppercase;
  text-decoration: none;
 }

.navlinks {
  width: 100%;
  text-align: center;
}

.navlink {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: #000;
  letter-spacing: 2px;
  display: block;
  text-transform: uppercase;
  padding: 0.5em 2em;
  text-decoration: none;
}

.social-media-icons {
  margin: 5% 0% 0% 0%;
  width: 90%;
  text-align: center;
}

.fab {
  margin: 2% 5%;
  border: 1px solid #000;
  border-radius: 35%;
  padding: 15px;
  width: 20px;
  height: 20px;
  font-size: 20px;
  text-decoration: none;
}

.fa-linkedin-in:hover {
  border-color: #0077B5;
  background: #0077B5;
  color: #fff;
}

.fa-linkedin-in {
  color: #000;
}

.fa-github:hover {
  background: #000000;
  color: #fff;
}

.fa-github {
  color: #000;
}

/* total width of main is width + padding-left + padding-right = 60% + 10% + 10% = 80%
/* on desktop, main takes up right 90% of viewport */
.main {
  float: right;
  position: relative;
  z-index: 0;
  width: 60%;
  padding-left: 10%;
  padding-right: 10%;
  padding-top: 12%;
  top: 0;
}

.main-title {
  text-decoration: underline;
}

.main-center {
  margin-top: 15%;
}

.spacer {
  margin-bottom: 10%;
}

